Changes for iteration 5

--- a/imagen/migration/static_pages/index.html
+++ b/imagen/migration/static_pages/index.html
@@ -11,9 +11,10 @@
            were acquired for the baseline, only some of them for the
            follow-up 1 and follow-up 2.
         </p>
-        <p>This server implements a data model that links data
-           entities together.
-        </p>
-        <center><a href="%(welcome-url)s" class="btn btn-large btn-success">Access the data</a></center>
+        <div id="div_data_and_qc_buttons" class="row">
+        <a href="%(welcome-url)s"   class="btn btn-large btn-success">Access the data</a>
+        <a href="%(QCcentral-url)s" class="btn btn-large btn-success">Access the QC</a>
+        </div>
+
     </div>
 </div>
