--- a/imagen/migration/static_pages/legal.html
+++ b/imagen/migration/static_pages/legal.html
@@ -8,7 +8,7 @@
     <dt>Hébergeur</dt>
     <dd>CEA</dd>
     <dt>Conception et réalisation</dt>
-    <dd>CEA/DSV/I2BM/NeuroSpin</dd>
+    <dd>CEA/DRF/I2BM/NeuroSpin</dd>
     <dt>Responsable éditorial</dt>
     <dd>Vincent Frouin<br/>Dimitri Papadopoulos</dd>
 </dl>
