cubes/imagen: version is now 1.6.0.

--- a/imagen/migration/static_pages/index.html
+++ b/imagen/migration/static_pages/index.html
@@ -2,7 +2,7 @@
 <h2><strong>The IMAGEN dataset</strong></h2>
 <div class="container" style="width: 100%%">
   <!-- Hero unit -->
-    <div class="span7 hero-unit">
+    <div class="welcome span7 hero-unit">
         <p>This web site serves the datasets collected from over 2000
            adolescents and their parents, and processed by the IMAGEN
            consortium to study mental health in young Europeans. It
