Link to the upload site from the publication site

--- a/imagen/migration/static_pages/index.html
+++ b/imagen/migration/static_pages/index.html
@@ -15,6 +15,10 @@
         <a href="%(welcome-url)s"   class="btn btn-large btn-success">Access the data</a>
         <a href="%(QCcentral-url)s" class="btn btn-large btn-success">Access the QC</a>
         </div>
+        <br/>
+        <div id="div_upload_button" class="row">
+        <a href="/upload" class="btn btn-large btn-success">Upload FU3 datasets</a>
+        </div>
 
     </div>
 </div>
